data/derived/sp14/progs/unify/prog1282.ml.out
Characters 119-130:
  | Average(v,w) -> ((eval(v,x,y) + eval(w,x,y))/2.0)
                      ^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
